Home page video embed, ogg tweaks.

--- a/Web.config
+++ b/Web.config
@@ -30,7 +30,7 @@
     </defaultDocument>
     <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
-      <mimeMap fileExtension=".ogg" mimeType="video/ogg" />
+      <mimeMap fileExtension=".ogv" mimeType="video/ogg" />
       <mimeMap fileExtension=".webm" mimeType="video/webm" />
       <mimeMap fileExtension=".mov" mimeType="video/mov" />
       <mimeMap fileExtension=".apportal" mimeType="application/apportal" />
