Bloom rss news feed

--- a/Web.config
+++ b/Web.config
@@ -35,6 +35,7 @@
       <mimeMap fileExtension=".mov" mimeType="video/mov" />
       <mimeMap fileExtension=".apportal" mimeType="application/apportal" />
       <mimeMap fileExtension=".woff" mimeType="application/x-font-woff" />
+      <mimeMap fileExtension=".rss" mimeType="application/rss+xml" />
     </staticContent>
   </system.webServer>
 </configuration>
