--- a/Web.config
+++ b/Web.config
@@ -23,6 +23,9 @@
             <add value="index.php" />
             <add value="index.html" />
             <add value="index.htm" />
+            <add value="page.php" />
+            <add value="page.html" />
+            <add value="page.htm" />
             <add value="default.php" />
             <add value="default.html" />
             <add value="default.htm" />
