Older news stories with page and url rewrite that mimics a weblog

--- a/Web.config
+++ b/Web.config
@@ -8,6 +8,10 @@
         </rewriteMap>
       </rewriteMaps>
   		<rules>
+        <rule name="Rewrite news url to query" stopProcessing="true">
+          <match url="^news/([_0-9a-z-]+)" />
+          <action type="Rewrite" url="news/?{R:1}" />
+        </rule>
   			<rule name="RewriteRule" stopProcessing="true">
   				<match url=".*" />
   				<conditions>
