--- a/Web.config
+++ b/Web.config
@@ -10,7 +10,7 @@
   		<rules>
         <rule name="Rewrite news url to query" stopProcessing="true">
           <match url="^news/([_0-9a-z-]+)" />
-          <action type="Rewrite" url="news/?{R:1}" />
+          <action type="Rewrite" url="news/?s={R:1}" />
         </rule>
   			<rule name="RewriteRule" stopProcessing="true">
   				<match url=".*" />
